[tool.poetry]
name = "qa-guru-python-3-17"
version = "0.1.0"
description = ""
authors = ["eushko <eushko@pikemedia.ru>"]
readme = "README.md"
packages = [{include = "qa_guru_python_3_17"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
selene = "2.0.0b14"


[tool.poetry.group.dev.dependencies]
pylin = "^0.2.7"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
